--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BH Web Audio 4th</title>
+	<title>indie band 3track</title>
 	<script src="./soundV.js"></script>
 	<style>
 	* {
